refactor & feat : cart refactor 및 영수증 출력 기능 추가